--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -2,7 +2,20 @@
 <h1> List of Songs </h1> 
 
  <div> <%= link_to "Create Song", new_song_path %> 
+<br> 
 
+<table> 
+  <thead> 
+    <tr> 
+      <th> Title </th> 
+      <th> Year </th> 
+      <th> Genre </th> 
+      <th> Artist Name </th> 
+      <th></th> 
+    </tr> 
+  </thead> 
+
+  
 <% @songs.each do |song| %>
   <%= song.title %>
   <%end%>
