--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,21 +1,34 @@
 
-<h1> List of Songs </h1> 
+<h1> List of Songs </h1>
 
- <div> <%= link_to "Create Song", new_song_path %> 
-<br> 
+ <div> <%= link_to "Create Song", new_song_path %>
+<br>
 
-<table> 
-  <thead> 
-    <tr> 
-      <th> Title </th> 
-      <th> Year </th> 
-      <th> Genre </th> 
-      <th> Artist Name </th> 
-      <th></th> 
-    </tr> 
-  </thead> 
+<table>
+  <thead>
+    <tr>
+      <th> Title </th>
+      <th> Year </th>
+      <th> Genre </th>
+      <th> Artist Name </th>
+      <th></th>
+    </tr>
+  </thead>
 
-  
-<% @songs.each do |song| %>
-  <%= song.title %>
-  <%end%>
+  <tbody> 
+    <% @songs.each do |song| %>
+      <tr> 
+        <td><%= song.title %><td>
+        <td><%= song.release_year %></td> 
+        <td><%= song.genre %></td> 
+        <td><%= song.artist_name %></td> 
+        <td> 
+          <%= link_to "Show", song_path(song) %>
+          <%= link_to "Edit", edit_song_path(song) %>
+          <%= link_to "Delete", song, method: :delete, data: { confirm: "Really?" } %> 
+        </td> 
+      </tr> 
+      <%end%>
+    </tbody> 
+  </table> 
+    
